[project]
name = "jfk-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "openai>=1.66.5",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
]
